--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body
     width: 100%;
     background-color: #f08700;
     text-align: center;
+    vertical-align: middle;
 }
 
 #main-page h1
@@ -37,7 +38,6 @@ body
     flex-wrap: wrap;
     align-items: flex-start;
 }
-
 
 .hidden
 {
